@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-08-03T02:01:23Z",
-  "count" : 120,
+  "timestamp" : "2025-08-16T01:40:46Z",
+  "count" : 56,
   "count_minmax" : [ 18, 120 ],
-  "count_decinc" : [ -0, +120 ],
+  "count_decinc" : [ -64, +120 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
