@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-08-15T01:46:08Z",
-  "count_outdated" : 264619,
-  "uniques_outdated" : 2745,
+  "timestamp" : "2025-08-16T01:40:46Z",
+  "count_outdated" : 264737,
+  "uniques_outdated" : 2747,
   "count" : 266244,
   "uniques" : 2772,
   "clones" : [
     {
-      "timestamp": "2025-08-01T00:00:00Z",
-      "count": 66,
-      "count_minmax": [ 8, 118 ],
-      "count_decinc": [ 52, 118 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2025-08-02T00:00:00Z",
-      "count": 120,
+      "count": 56,
       "count_minmax": [ 18, 120 ],
-      "count_decinc": [ 0, 120 ],
+      "count_decinc": [ 64, 120 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
