@@ -1,15 +1,10 @@
 {
-  "count": 1573,
+  "count": 1443,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-08-01T00:00:00Z",
-      "count": 66,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-08-02T00:00:00Z",
-      "count": 120,
+      "count": 56,
       "uniques": 1
     },
     {
